Remove messages of already running CTests for UnitTests

Summary:
- starting unit tests for a project or simply "Run All Tests"
  could start showing up messages of already running instances
  of CTest
- after killing or not killing those, KDevelop could finally crash
BUG: 377639

Fixes:
- use job name in NativeAppJob depending on executable to be
  able to distinguish between different tests
- after the message box, re-read the list of running jobs
- actual bugfix: only emit the result once for failing tests

Test Plan:
- run kdevelop/kdevelop unit tests at once
- see what happens after tests are failing

Reviewers: #kdevelop, apol

Reviewed By: #kdevelop, apol

Subscribers: apol, kfunk, kdevelop-devel

Differential Revision: https://phabricator.kde.org/D6593